--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/" />
-<meta name="md-vertical-step/config/environment" content="%7B%22modulePrefix%22%3A%22md-vertical-step%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22md-vertical-step%22%2C%22version%22%3A%220.0.0+9235946b%22%7D%2C%22baseUrl%22%3A%22/md-vertical-step%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="md-vertical-step/config/environment" content="%7B%22modulePrefix%22%3A%22md-vertical-step%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22md-vertical-step%22%2C%22version%22%3A%220.0.0+2745dd48%22%7D%2C%22baseUrl%22%3A%22/md-vertical-step%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 
-    <link rel="stylesheet" href="assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css" integrity="sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU= sha512-z4PhNX7vuL3xVChQ1m2AB9Yg5AULVxXcg/SpIdNs6c5H0NE8XYXysP+DGNKHfuwvY7kxvUdBeoGlODJ6+SfaPg==" >
-    <link rel="stylesheet" href="assets/md-vertical-step-cdf0b6971393942cf2a2a005e3fa9088.css" integrity="sha256-25Q6M1XGTdh/3b0fQ9Uquf7WcUHcc/y3B/arpp5JWaQ= sha512-l/D2gPClOMIn6pvgvJROo6IQVzvxy3kAI/J+8pMOg1plTVlmgHo/qtnmC0sKsVNcGPRFWelhp5q4POsUKUX9KA==" >
+    <link rel="stylesheet" href="md-vertical-step/assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
+    <link rel="stylesheet" href="md-vertical-step/assets/md-vertical-step-cdf0b6971393942cf2a2a005e3fa9088.css">
 
     
   </head>
   <body>
     <div id='paper-wormhole'></div>
 
-    <script src="assets/vendor-fb173f0f4a981650b56917e210d6cfd3.js" integrity="sha256-r/z8+kRFLjqYPDmI0bImZMt+32BZwj6OHAkG0wIGz38= sha512-3JL9fzYUoE2xwKPgkDHwtoPC6rbCwS5BFitkPY5N++q8YtMqiuP5iN4wcJpNAGl9HhHB+OgvUuMkqblfg/SlLg==" ></script>
-    <script src="assets/md-vertical-step-01e2240fb7f92b65730d09d391e61e3c.js" integrity="sha256-mIlRRJ+m+OBkAfr2R+qk9aESjyoQRu7DNkjQiYwvc50= sha512-JX5hJWv/v8rLTjSwF+ODYkM/AvBhsli3ZQuMYdwLBXQbm8O1QMhfYspXl4aLTOvrgyieQxnLxzGOUP1b4aXwRg==" ></script>
+    <script src="md-vertical-step/assets/vendor-fb173f0f4a981650b56917e210d6cfd3.js"></script>
+    <script src="md-vertical-step/assets/md-vertical-step-819b86f42d74097e9f429fdd2a402505.js"></script>
 
     
   </body>
