--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/" />
-<meta name="md-vertical-step/config/environment" content="%7B%22modulePrefix%22%3A%22md-vertical-step%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22md-vertical-step%22%2C%22version%22%3A%220.0.0+2745dd48%22%7D%2C%22baseUrl%22%3A%22/md-vertical-step%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="md-vertical-step/config/environment" content="%7B%22modulePrefix%22%3A%22md-vertical-step%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22md-vertical-step%22%2C%22version%22%3A%220.0.0+5d28dee9%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 
     <link rel="stylesheet" href="md-vertical-step/assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
     <link rel="stylesheet" href="md-vertical-step/assets/md-vertical-step-cdf0b6971393942cf2a2a005e3fa9088.css">
@@ -19,7 +19,7 @@
     <div id='paper-wormhole'></div>
 
     <script src="md-vertical-step/assets/vendor-fb173f0f4a981650b56917e210d6cfd3.js"></script>
-    <script src="md-vertical-step/assets/md-vertical-step-819b86f42d74097e9f429fdd2a402505.js"></script>
+    <script src="md-vertical-step/assets/md-vertical-step-0a4d7a6a8e05800ef03635de746e8c63.js"></script>
 
     
   </body>
