Update readme and config

--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,16 @@
 
     {{content-for "head"}}
 
-    <link rel="stylesheet" href="md-vertical-step/assets/vendor.css">
-    <link rel="stylesheet" href="md-vertical-step/assets/md-vertical-step.css">
+    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/md-vertical-step.css">
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
-    <script src="md-vertical-step/assets/vendor.js"></script>
-    <script src="md-vertical-step/assets/md-vertical-step.js"></script>
+    <script src="assets/vendor.js"></script>
+    <script src="assets/md-vertical-step.js"></script>
 
     {{content-for "body-footer"}}
   </body>
